Spring_2026/CS2520_Python/Notes/i_2026-03-14_03-02-45.txt
Script started on 2026-03-14 03:02:45+00:00 [COMMAND="python3" TERM="xterm-256color" TTY="/dev/pts/1" COLUMNS="57" LINES="15"]
Python 3.12.1 (main, Nov 27 2025, 10:47:52) [GCC 13.3.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> [10,20,30,40,50]
[10, 20, 30, 40, 50]
>>> [10,20,30,40,50]w[10,20,30,40,50][C[C[C[C[Ca[10,20,30,40,50][C[C[C[C[C[Cw[10,20,30,40,50][C[C[C[C[C[C[Ca[10,20,30,40,50][C[C[C[C[C[C[C[C=[10,20,30,40,50][C[C[C[C[C[C[C[C[C
>>> waaw[K[Kwa
[10, 20, 30, 40, 50]
>>> wawa=[10,20,30,40,50][C[C[C[C[C[C[C[C[K[K[10, 20, 30, 40, 50]
[10, 20, 30, 40, 50]
>>> [10, 20, 30, 40, 50][C[C[C[C[C[C[C[C[C[C[C[C[1@][1P[1@[[C[C[C[1@][1@1
  File "<stdin>", line 1
    [10,[ 20]1, 30, 40, 50]
        ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
>>> [10,[ 20]1, 30, 40, 50][C[C[1P
[10, [20], 30, 40, 50]
>>> [10,[ 20], 30, 40, 50][1@[[C[C[1@]
[10, [20], [30], 40, 50]
>>> [10,[ 20], [30], 40, 50][C[C[C[C[C[C[C[C[C[1@[[C[C[1@]
[10, [20], [30], [40], 50]
>>> [10,[ 20], [30], [40], 50][50][C[C[C][C[1P
[10, [20], [30], [40], [50]]
>>> [10,[20], [30], [40], [50]][C[C[C[C[K[1P50]
[10, [20], [30], [40], 50]
>>> [10,[20], [30], [40], 50][1@p[1@r[1@i[1@n[1@t[1@([C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C)
[10, [20], [30], [40], 50]
>>> x[Kexit()

Script done on 2026-03-14 03:05:45+00:00 [COMMAND_EXIT_CODE="0"]
